<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_launch</name>
  <version>0.0.1</version>
  <description>Package to start all robot nodes</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ddsm115_driver</exec_depend>
  <exec_depend>imu_driver_node</exec_depend>
  <exec_depend>robot_tf_publisher</exec_depend>
  <exec_depend>tmini_driver_node</exec_depend>
  <exec_depend>odometry_node</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rl_balancer_node</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
